--- a/OccuPostTable.yml
+++ b/OccuPostTable.yml
@@ -1,5 +1,5 @@
 Resources:
-  UserTable:
+  OccuPostTable:
     Type: AWS::DynamoDB::Table
     Properties:
       "AttributeDefinitions":
@@ -11,4 +11,4 @@ Resources:
       PointInTimeRecoverySpecification:
         PointInTimeRecoveryEnabled: false
       BillingMode: PAY_PER_REQUEST
-      TableName: "LambdaExample"
+      TableName: "OccuPost"
