--- a/LambdaService-template.yml
+++ b/LambdaService-template.yml
@@ -6,13 +6,13 @@ Parameters:
     Type: String
     Default: dev
 Resources:
-  GetExampleDataFunction:
+  GetHireStatusFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: ServiceLambda/build/distributions/ServiceLambda.zip
-      Handler: com.kenzie.capstone.service.lambda.GetExampleData
+      Handler: com.kenzie.capstone.service.lambda.GetHireStatus
       Runtime: java11
-      Description: Get Example Data for given id
+      Description: Get Hire Status for given id
       MemorySize: 512
       Timeout: 240
       # Function's execution role
@@ -28,15 +28,15 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /example/{id}
+            Path: /status/{id}
             Method: get
-  SetExampleDataFunction:
+  SetHireStatusFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: ServiceLambda/build/distributions/ServiceLambda.zip
-      Handler: com.kenzie.capstone.service.lambda.SetExampleData
+      Handler: com.kenzie.capstone.service.lambda.SetHireStatus
       Runtime: java11
-      Description: Set Example Data
+      Description: Set Hire Status
       MemorySize: 512
       Timeout: 240
       # Function's execution role
@@ -52,6 +52,6 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /example/
+            Path: /status/
             Method: post
 
