fixed lambda problems

--- a/LambdaService-template.yml
+++ b/LambdaService-template.yml
@@ -52,7 +52,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /hirestatus/add
+            Path: /hirestatus/set
             Method: post
   UpdateHireStatusFunction:
     Type: AWS::Serverless::Function
